service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openhab
spec:
  selector:
    app: openhab
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
      name: http
    - protocol: TCP
      port: 8443
      targetPort: https
      name: https
    - protocol: TCP
      port: 8101
      targetPort: console
      name: console
