ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openhab
spec:
  rules:
  - host: openhab.homek8s
    http:
      paths:
      - path: /
        backend:
          serviceName: openhab
          servicePort: http
